Update View.java